exemples/6_secret_namespace_networkpolicies/secret.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      volumes:
      - name: secret-volume
        secret:
          secretName: mon-premier-secret
      containers:
      - name: my-container
        image: busybox
        command:
          - "sh"
          - "-c"
          - |
            ls -l /etc/secret-volume
            sleep 10000
        volumeMounts:
        - name: secret-volume
          readOnly: true
          mountPath: "/etc/secret-volume"
