exemples/6_secret_namespace_networkpolicies/1-ingress-init.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-ingress
  labels:
    labels-namespace: test-ingress
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alpha-app
  namespace: test-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alpha-app
  template:
    metadata:
      labels:
        app: alpha-app
    spec:
      containers:
      - name: my-container
        image: laurentsogeti/ckad_formation_ingress:0.0.5
        imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beta-app
  namespace: test-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beta-app
  template:
    metadata:
      labels:
        app: beta-app
    spec:
      containers:
      - name: my-container
        image: laurentsogeti/ckad_formation_ingress:0.0.5
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: alpha-app
  namespace: test-ingress
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: alpha-app
  type: ClusterIP
status:
  loadBalancer: {}

---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: beta-app
  namespace: test-ingress
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: beta-app
  type: ClusterIP
status:
  loadBalancer: {}
