exemples/6_secret_namespace_networkpolicies/np-init.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bar-ns
  labels:
    labels-namespace: bar-ns

---
apiVersion: v1
kind: Namespace
metadata:
  name: foo-ns
  labels:
    labels-namespace: foo-ns

---
apiVersion: v1
kind: Namespace
metadata:
  name: toto-ns
  labels:
    labels-namespace: toto-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar
  namespace:  bar-ns
  labels:
    app: bar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bar
  template:
    metadata:
      labels:
        app: bar
    spec:
      containers:
      - name: conteneur1
        image: laurentsogeti/ckad_formation_networkpolicies:0.0.1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bar
  name: bar
  namespace: bar-ns
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: bar


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unautrebar
  namespace:  bar-ns
  labels:
    app: bar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bar
  template:
    metadata:
      labels:
        app: bar
    spec:
      containers:
      - name: conteneur1
        image: laurentsogeti/ckad_formation_networkpolicies:0.0.1
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unautrebar42
  namespace:  bar-ns
  labels:
    app: test42
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test42
  template:
    metadata:
      labels:
        app: test42
    spec:
      containers:
      - name: conteneur1
        image: laurentsogeti/ckad_formation_networkpolicies:0.0.1
        ports:
        - containerPort: 80
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: toto
  namespace:  toto-ns
  labels:
    app: toto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: toto
  template:
    metadata:
      labels:
        app: toto
    spec:
      containers:
      - name: conteneur1
        image: laurentsogeti/ckad_formation_networkpolicies:0.0.1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: toto
  name: toto
  namespace: toto-ns
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: toto

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo
  namespace:  foo-ns
  labels:
    app: foo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foo
  template:
    metadata:
      labels:
        app: foo
    spec:
      containers:
      - name: conteneur1
        image: laurentsogeti/ckad_formation_networkpolicies:0.0.1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: foo
  name: foo
  namespace: foo-ns
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: foo
---
