exemples/6_secret_namespace_networkpolicies/1-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: team-alpha
  labels:
    labels-namespace: team-alpha

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alpha-app
  namespace: team-alpha
spec:
  replicas: 3
  selector:
    matchLabels:
      app: alpha-app
  template:
    metadata:
      labels:
        app: alpha-app
    spec:
      containers:
      - name: my-container
        image: laurentsogeti/ckad_formation_ingress:0.0.1
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: alpha-app
  namespace: team-alpha
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: alpha-app
  type: ClusterIP
status:
  loadBalancer: {}

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alpha-app-ingress
  namespace: team-alpha
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: monpremieringressclass
  rules:
  - host: toto.fr
    http:
      paths:
      - path: /app-team(/|$)(.*)
        backend:
          service:
            name: alpha-app
            port: 
              number: 80
        pathType: Prefix
