exemples/6_secret_namespace_networkpolicies/2-np-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-toto-all-egress-ingress
  namespace: toto-ns
spec:
  podSelector: {} # Cible tous les pods de toto-ns
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-foo-all-egress-ingress
  namespace: foo-ns
spec:
  podSelector: {} # Cible tous les pods de foo-ns
  policyTypes:
  - Egress
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-bar-all-egress-ingress
  namespace: bar-ns
spec:
  podSelector: {} # Cible tous les pods de bar-ns
  policyTypes:
  - Ingress
  - Egress
