exemples/6_secret_namespace_networkpolicies/3-np-ingress-bar-foo.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-bar-to-foo
  namespace: foo-ns
spec:
  podSelector: {} # Cible tous les pods de foo-ns
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          labels-namespace: bar-ns
  egress:
  - to: 
    - namespaceSelector: 
        matchLabels: 
          labels-namespace: bar-ns
