exemples/6_secret_namespace_networkpolicies/4-np-ingress-bar-toto.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-bar-to-toto
  namespace: toto-ns
spec:
  podSelector: 
    matchLabels: 
      app:  toto
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: bar
      namespaceSelector: 
        matchLabels: 
          labels-namespace: bar-ns
  egress: 
    - to: 
      - podSelector:
          matchLabels:
            app: bar
        namespaceSelector: 
          matchLabels: 
            labels-namespace: bar-ns

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-toto-to-bar
  namespace: bar-ns
spec:
  podSelector: 
    matchLabels: 
      app: bar
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: toto
      namespaceSelector: 
        matchLabels: 
          labels-namespace: toto-ns
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: toto
      namespaceSelector: 
        matchLabels: 
          labels-namespace: toto-ns
  - to:
    ports:
      - protocol: TCP
        port: 53
      - protocol: UDP
        port: 53
