exemples/6_secret_namespace_networkpolicies/5-np-ingress-toto-foo.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-toto-to-foo
  namespace: toto-ns
spec:
  podSelector: 
    matchLabels: 
      app:  toto
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector: 
        matchLabels: 
          labels-namespace: foo-ns
  egress: 
    - to: 
        - namespaceSelector: 
           matchLabels: 
            labels-namespace: foo-ns
    - to:
      ports:
        - protocol: TCP
          port: 53
        - protocol: UDP
          port: 53

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-toto-to-foo-response
  namespace: foo-ns
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress: 
    - from: 
        - namespaceSelector: 
           matchLabels: 
            labels-namespace: toto-ns
          podSelector:
            matchLabels:
              app: toto
